@@ -1,0 +1,9 @@
+Title: Git integration: Using mail address of user in author info
+Level: 1
+Component: wato
+Compatible: compat
+Version: 1.4.0i3
+Date: 1480322901
+Class: fix
+
+
